Fixes to booking and training
